--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -204,11 +204,23 @@
                 <div class="home">
                 <div class="col-md-6 home-txt">
                    <div class="home-right"> 
-                <h1>  Unlock Exclusive Grocery Deals – Just One Tap Away </h1>
+           
 			   <div class="home-exp">
-   <h2>We Are Proud To Say That Our Digital Reusable <strong>eGift Card</strong> Can Now Use At <strong>76 Supermarkets</strong> and <strong> 300+ Stores</strong> Across Jamaica </h2>
-<br>
-                                      <h4><strong>Members Statistics:</strong> From 2024 To Present </h4>
+       <p style=""><strong>View Daily Deals Via Your WhatsApp Status</strong></p>
+				       
+				       <h3><strong>Deals UpTo 80% Discounts</strong></h3>
+				    
+				      <h3>Deals Are Handpick By Our Deal-Editors From A List Of Stores In Jamaica & Overseas and Displayed On Our WhatsApp Status Daily.</h3>
+				     
+				    <h4> When You Ready To Make A Purchase, Accept Free Member's Price Or Become A Paid Member And Get The Best Deal + FREE Handling & Delivery On All Purchases Within That Year</h4>
+				      <!-- <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
+					
+				      
+				      <br>
+                                           <H4>Have A Referral Code? </4>
+                              <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
+                               
+                            <br> <br>
     </div>
                         </div>
                             </div> 
