--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -206,13 +206,13 @@
                    <div class="home-right"> 
            
 			   <div class="home-exp"><br>
-       <p style=""><strong>View Daily Deals Via Your WhatsApp Status</strong></p>
+       <p style=""><strong>View Daily Deals Via Our PWA App</strong></p>
 				       
 				       <h3><strong>Deals UpTo 80% Discounts</strong></h3>
 				    
-				      <h3>Deals Are Handpick By Our Deal-Editors From A List Of Stores In Jamaica & Overseas and Displayed On Our WhatsApp Status Daily.</h3>
+				      <h2>Deals Are Handpick By Our Deal-Editors From A List Of Stores In Jamaica & Displayed In Our App Daily.</h3>
 				     
-				    <h4> When You Ready To Make A Purchase, Accept Free Member's Price Or Become A Paid Member And Get The Best Deal + FREE Handling & Delivery On All Purchases Within That Year</h4>
+				    <h4> When You're Ready To Make A Purchase, Accept Free Member's Price Or Become A Paid Member And Get The Best Deal + FREE Handling & Delivery On All Purchases Within That Year</h4>
 				      <!-- <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
 					
 				      
