--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -211,9 +211,10 @@
 				       <h1><strong>Deals UpTo 80% Discounts</strong></h1>
 				    
 				      <h2>Deals Are Handpick By Our Deal-Editors From A List Of Supermarket & Stores In Jamaica & Displayed In Our App Daily.</h2>
+
+				    <h4> Spotted A Deal You Love? And Ready To Make A Purchase, Visit The Business Location To Claim It</h4>
 				     
-				    <h4> When You're Ready To Make A Purchase, Accept Free Member's Price Or Become A Paid Member And Get The Best Deal + FREE Handling & Delivery On All Purchases Within That Year</h4>
-				      <!-- <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
+				   <!-- <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
 					
 				      
 				      <br>
